[HERCULES-9155] - I18n titulo de Proyecto