@@ -7,9 +7,6 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.crue.hercules.sgi.csp.config.SgiConfigProperties;
@@ -22,7 +19,10 @@ import org.crue.hercules.sgi.csp.repository.ProyectoPeriodoJustificacionReposito
 import org.crue.hercules.sgi.csp.repository.ProyectoRepository;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiCnfService;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiComService;
+import org.crue.hercules.sgi.framework.i18n.I18nHelper;
 import org.springframework.stereotype.Service;
+
+import com.fasterxml.jackson.core.JsonProcessingException;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -71,8 +71,7 @@ public class ComunicadosService {
                 .toInstant(),
             yearMonth.atEndOfMonth().atStartOfDay(zoneId).withHour(23).withMinute(59).withSecond(59).toInstant());
 
-    List<Long> proyectoIds = periodos.stream().map(ProyectoPeriodoJustificacion::getProyectoId)
-        .collect(Collectors.toList());
+    List<Long> proyectoIds = periodos.stream().map(ProyectoPeriodoJustificacion::getProyectoId).toList();
 
     if (CollectionUtils.isEmpty(proyectoIds)) {
       log.info(
@@ -95,7 +94,7 @@ public class ComunicadosService {
         for (ProyectoPeriodoJustificacion periodo : periodosProyecto) {
           CspComInicioPresentacionGastoData.Proyecto proyectoEmail = CspComInicioPresentacionGastoData.Proyecto
               .builder()
-              .titulo(proyecto.getTitulo())
+              .titulo(I18nHelper.getFieldValue(proyecto.getTitulo()))
               .fechaInicio(periodo.getFechaInicioPresentacion())
               .fechaFin(periodo.getFechaFinPresentacion())
               .build();
@@ -140,7 +139,7 @@ public class ComunicadosService {
 
     return destinatarios.stream()
         .map(destinatario -> Recipient.builder().name(destinatario).address(destinatario).build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private Map<Long, List<ProyectoPeriodoJustificacion>> getPeriodosJustificacionGastoByProyecto(
