@@ -3,8 +3,9 @@ package org.crue.hercules.sgi.csp.controller;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.assertj.core.api.Assertions;
 import org.crue.hercules.sgi.csp.converter.ProyectoPeriodoSeguimientoConverter;
@@ -13,14 +14,15 @@ import org.crue.hercules.sgi.csp.converter.RequerimientoJustificacionConverter;
 import org.crue.hercules.sgi.csp.dto.ProyectoPeriodoSeguimientoOutput;
 import org.crue.hercules.sgi.csp.dto.ProyectoSeguimientoEjecucionEconomica;
 import org.crue.hercules.sgi.csp.dto.ProyectoSeguimientoJustificacionOutput;
+import org.crue.hercules.sgi.csp.dto.ProyectoSeguimientoJustificacionOutput.ProyectoProyectoSgeOutput;
 import org.crue.hercules.sgi.csp.dto.RequerimientoJustificacionOutput;
 import org.crue.hercules.sgi.csp.dto.SeguimientoJustificacionAnualidad;
-import org.crue.hercules.sgi.csp.dto.ProyectoSeguimientoJustificacionOutput.ProyectoProyectoSgeOutput;
 import org.crue.hercules.sgi.csp.enums.TipoSeguimiento;
 import org.crue.hercules.sgi.csp.model.ProyectoPeriodoJustificacion;
 import org.crue.hercules.sgi.csp.model.ProyectoPeriodoSeguimiento;
 import org.crue.hercules.sgi.csp.model.ProyectoProyectoSge;
 import org.crue.hercules.sgi.csp.model.ProyectoSeguimientoJustificacion;
+import org.crue.hercules.sgi.csp.model.ProyectoTitulo;
 import org.crue.hercules.sgi.csp.model.RequerimientoJustificacion;
 import org.crue.hercules.sgi.csp.service.ProyectoPeriodoJustificacionSeguimientoService;
 import org.crue.hercules.sgi.csp.service.ProyectoPeriodoJustificacionService;
@@ -28,6 +30,8 @@ import org.crue.hercules.sgi.csp.service.ProyectoPeriodoSeguimientoService;
 import org.crue.hercules.sgi.csp.service.ProyectoSeguimientoJustificacionService;
 import org.crue.hercules.sgi.csp.service.ProyectoService;
 import org.crue.hercules.sgi.csp.service.RequerimientoJustificacionService;
+import org.crue.hercules.sgi.framework.i18n.I18nHelper;
+import org.crue.hercules.sgi.framework.i18n.Language;
 import org.crue.hercules.sgi.framework.test.web.servlet.result.SgiMockMvcResultHandlers;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
@@ -104,9 +108,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           int toIndex = fromIndex + size;
           toIndex = toIndex > proyectos.size() ? proyectos.size() : toIndex;
           List<ProyectoSeguimientoEjecucionEconomica> content = proyectos.subList(fromIndex, toIndex);
-          Page<ProyectoSeguimientoEjecucionEconomica> pageResponse = new PageImpl<>(content, pageable,
-              proyectos.size());
-          return pageResponse;
+          return new PageImpl<>(content, pageable, proyectos.size());
         });
 
     // when: Get page=3 with pagesize=10
@@ -130,7 +132,8 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         });
     for (int i = 31; i <= 37; i++) {
       ProyectoSeguimientoEjecucionEconomica proyecto = proyectosResponse.get(i - (page * pageSize) - 1);
-      Assertions.assertThat(proyecto.getNombre()).isEqualTo("Proyecto-" + String.format("%03d", i));
+      Assertions.assertThat(I18nHelper.getValueForLanguage(proyecto.getNombre(), Language.ES))
+          .isEqualTo("Proyecto-" + String.format("%03d", i));
     }
   }
 
@@ -145,8 +148,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<ProyectoSeguimientoEjecucionEconomica>>() {
           @Override
           public Page<ProyectoSeguimientoEjecucionEconomica> answer(InvocationOnMock invocation) throws Throwable {
-            Page<ProyectoSeguimientoEjecucionEconomica> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
 
@@ -182,9 +184,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           int toIndex = fromIndex + size;
           toIndex = toIndex > periodosJustificacion.size() ? periodosJustificacion.size() : toIndex;
           List<ProyectoPeriodoJustificacion> content = periodosJustificacion.subList(fromIndex, toIndex);
-          Page<ProyectoPeriodoJustificacion> pageResponse = new PageImpl<>(content, pageable,
-              periodosJustificacion.size());
-          return pageResponse;
+          return new PageImpl<>(content, pageable, periodosJustificacion.size());
         });
 
     // when: Get page=3 with pagesize=10
@@ -223,8 +223,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<ProyectoSeguimientoEjecucionEconomica>>() {
           @Override
           public Page<ProyectoSeguimientoEjecucionEconomica> answer(InvocationOnMock invocation) throws Throwable {
-            Page<ProyectoSeguimientoEjecucionEconomica> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
 
@@ -240,9 +239,13 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   private ProyectoSeguimientoEjecucionEconomica generarMockProyectoSeguimientoEjecucionEconomica(Long id,
       String nombre) {
+
+    Set<ProyectoTitulo> tituloProyecto = new HashSet<>();
+    tituloProyecto.add(new ProyectoTitulo(Language.ES, nombre));
+
     return ProyectoSeguimientoEjecucionEconomica.builder()
         .id(id)
-        .nombre(nombre)
+        .nombre(tituloProyecto)
         .build();
   }
 
@@ -276,9 +279,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           int toIndex = fromIndex + size;
           toIndex = toIndex > periodosJustificacion.size() ? periodosJustificacion.size() : toIndex;
           List<ProyectoPeriodoSeguimiento> content = periodosJustificacion.subList(fromIndex, toIndex);
-          Page<ProyectoPeriodoSeguimiento> pageResponse = new PageImpl<>(content, pageable,
-              periodosJustificacion.size());
-          return pageResponse;
+          return new PageImpl<>(content, pageable, periodosJustificacion.size());
         });
     BDDMockito
         .given(proyectoPeriodoSeguimientoConverter.convert(ArgumentMatchers.<Page<ProyectoPeriodoSeguimiento>>any()))
@@ -286,13 +287,12 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           @Override
           public Page<ProyectoPeriodoSeguimientoOutput> answer(InvocationOnMock invocation) throws Throwable {
             Page<ProyectoPeriodoSeguimiento> pageInput = invocation.getArgument(0);
-            List<ProyectoPeriodoSeguimientoOutput> content = pageInput.getContent().stream().map(input -> {
-              return generarMockProyectoPeriodoSeguimientoOutput(input);
-            }).collect(Collectors.toList());
-            Page<ProyectoPeriodoSeguimientoOutput> pageOutput = new PageImpl<>(content,
+            List<ProyectoPeriodoSeguimientoOutput> content = pageInput.getContent().stream()
+                .map(SeguimientoEjecucionEconomicaControllerTest.this::generarMockProyectoPeriodoSeguimientoOutput)
+                .toList();
+            return new PageImpl<>(content,
                 pageInput.getPageable(),
                 pageInput.getTotalElements());
-            return pageOutput;
           }
         });
 
@@ -333,8 +333,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<ProyectoPeriodoSeguimiento>>() {
           @Override
           public Page<ProyectoPeriodoSeguimiento> answer(InvocationOnMock invocation) throws Throwable {
-            Page<ProyectoPeriodoSeguimiento> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
 
@@ -388,7 +387,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-V" })
-  public void findRequerimientosJustificacion_ReturnsPage() throws Exception {
+  void findRequerimientosJustificacion_ReturnsPage() throws Exception {
     // given: Una lista con 37 RequerimientoJustificacion
     String proyectoSgeRef = "1";
     List<RequerimientoJustificacion> requerimientosJustificacion = new ArrayList<>();
@@ -408,9 +407,8 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           int toIndex = fromIndex + size;
           toIndex = toIndex > requerimientosJustificacion.size() ? requerimientosJustificacion.size() : toIndex;
           List<RequerimientoJustificacion> content = requerimientosJustificacion.subList(fromIndex, toIndex);
-          Page<RequerimientoJustificacion> pageResponse = new PageImpl<>(content, pageable,
-              requerimientosJustificacion.size());
-          return pageResponse;
+          return new PageImpl<>(content, pageable, requerimientosJustificacion.size());
+
         });
 
     BDDMockito
@@ -419,12 +417,10 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           @Override
           public Page<RequerimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
             Page<RequerimientoJustificacion> pageInput = invocation.getArgument(0);
-            List<RequerimientoJustificacionOutput> content = pageInput.getContent().stream().map(input -> {
-              return generarMockRequerimientoJustificacionOutput(input);
-            }).collect(Collectors.toList());
-            Page<RequerimientoJustificacionOutput> pageOutput = new PageImpl<>(content, pageInput.getPageable(),
-                pageInput.getTotalElements());
-            return pageOutput;
+            List<RequerimientoJustificacionOutput> content = pageInput.getContent().stream()
+                .map(SeguimientoEjecucionEconomicaControllerTest.this::generarMockRequerimientoJustificacionOutput)
+                .toList();
+            return new PageImpl<>(content, pageInput.getPageable(), pageInput.getTotalElements());
           }
         });
 
@@ -456,7 +452,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-E" })
-  public void findRequerimientosJustificacion_EmptyList_Returns204() throws Exception {
+  void findRequerimientosJustificacion_EmptyList_Returns204() throws Exception {
     // given: no data RequerimientoJustificacion
     String proyectoSgeRef = "1";
     BDDMockito
@@ -465,8 +461,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<RequerimientoJustificacion>>() {
           @Override
           public Page<RequerimientoJustificacion> answer(InvocationOnMock invocation) throws Throwable {
-            Page<RequerimientoJustificacion> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
     BDDMockito
@@ -474,8 +469,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<RequerimientoJustificacionOutput>>() {
           @Override
           public Page<RequerimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
-            Page<RequerimientoJustificacionOutput> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
     // when: get page=3 with pagesize=10
@@ -491,7 +485,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-V" })
-  public void findSeguimientosJustificacion_ReturnsPage() throws Exception {
+  void findSeguimientosJustificacion_ReturnsPage() throws Exception {
     // given: Una lista con 37 ProyectoSeguimientoJustificacion
     String proyectoSgeRef = "1";
     List<ProyectoSeguimientoJustificacion> proyectoSeguimientosJustificacion = new ArrayList<>();
@@ -513,9 +507,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
               : toIndex;
           List<ProyectoSeguimientoJustificacion> content = proyectoSeguimientosJustificacion.subList(fromIndex,
               toIndex);
-          Page<ProyectoSeguimientoJustificacion> pageResponse = new PageImpl<>(content, pageable,
-              proyectoSeguimientosJustificacion.size());
-          return pageResponse;
+          return new PageImpl<>(content, pageable, proyectoSeguimientosJustificacion.size());
         });
 
     BDDMockito
@@ -525,12 +517,11 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
           @Override
           public Page<ProyectoSeguimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
             Page<ProyectoSeguimientoJustificacion> pageInput = invocation.getArgument(0);
-            List<ProyectoSeguimientoJustificacionOutput> content = pageInput.getContent().stream().map(input -> {
-              return generarMockProyectoSeguimientoJustificacionOutput(input);
-            }).collect(Collectors.toList());
-            Page<ProyectoSeguimientoJustificacionOutput> pageOutput = new PageImpl<>(content, pageInput.getPageable(),
-                pageInput.getTotalElements());
-            return pageOutput;
+            List<ProyectoSeguimientoJustificacionOutput> content = pageInput.getContent().stream()
+                .map(
+                    SeguimientoEjecucionEconomicaControllerTest.this::generarMockProyectoSeguimientoJustificacionOutput)
+                .toList();
+            return new PageImpl<>(content, pageInput.getPageable(), pageInput.getTotalElements());
           }
         });
 
@@ -563,7 +554,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-E" })
-  public void findSeguimientosJustificacion_EmptyList_Returns204() throws Exception {
+  void findSeguimientosJustificacion_EmptyList_Returns204() throws Exception {
     // given: no data ProyectoSeguimientoJustificacion
     String proyectoSgeRef = "1";
     BDDMockito
@@ -572,8 +563,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<ProyectoSeguimientoJustificacion>>() {
           @Override
           public Page<ProyectoSeguimientoJustificacion> answer(InvocationOnMock invocation) throws Throwable {
-            Page<ProyectoSeguimientoJustificacion> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
     BDDMockito
@@ -583,8 +573,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<Page<ProyectoSeguimientoJustificacionOutput>>() {
           @Override
           public Page<ProyectoSeguimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
-            Page<ProyectoSeguimientoJustificacionOutput> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
     // when: get page=3 with pagesize=10
@@ -600,7 +589,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-V" })
-  public void findSeguimientosJustificacionAnualidad_ReturnsList() throws Exception {
+  void findSeguimientosJustificacionAnualidad_ReturnsList() throws Exception {
     // given: Una lista con 20 SeguimientoJustificacionAnualidad
     String proyectoSgeRef = "1";
     List<SeguimientoJustificacionAnualidad> seguimientosJustificacionAnualidad = new ArrayList<>();
@@ -610,10 +599,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
     BDDMockito
         .given(proyectoPeriodoJustificacionSeguimientoService
             .findSeguimientosJustificacionAnualidadByProyectoSgeRef(ArgumentMatchers.<String>any()))
-        .willAnswer((InvocationOnMock invocation) -> {
-          List<SeguimientoJustificacionAnualidad> listResponse = seguimientosJustificacionAnualidad;
-          return listResponse;
-        });
+        .willAnswer((InvocationOnMock invocation) -> seguimientosJustificacionAnualidad);
 
     // when: Get SeguimientoJustificacionAnualidad para proyectoSgeRef
     MvcResult requestResult = mockMvc
@@ -639,7 +625,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
 
   @Test
   @WithMockUser(username = "user", authorities = { "CSP-SJUS-E" })
-  public void findSeguimientosJustificacionAnualidad_EmptyList_Returns204() throws Exception {
+  void findSeguimientosJustificacionAnualidad_EmptyList_Returns204() throws Exception {
     // given: no data SeguimientoJustificacionAnualidad
     String proyectoSgeRef = "1";
     BDDMockito
@@ -648,8 +634,7 @@ class SeguimientoEjecucionEconomicaControllerTest extends BaseControllerTest {
         .willAnswer(new Answer<List<SeguimientoJustificacionAnualidad>>() {
           @Override
           public List<SeguimientoJustificacionAnualidad> answer(InvocationOnMock invocation) throws Throwable {
-            List<SeguimientoJustificacionAnualidad> list = Collections.emptyList();
-            return list;
+            return Collections.emptyList();
           }
         });
     // when: get SeguimientoJustificacionAnualidad para proyectoSgeRef
